wrong padding fixed between cursor and input box bottom line

--- a/resources/assets/sass/components/_textfield.scss
+++ b/resources/assets/sass/components/_textfield.scss
@@ -25,7 +25,7 @@
     font-size: $textfield-font-size;
     font-family: $preferred_font;
     margin: 0;
-    padding: $textfield-padding 0;
+    padding: $textfield-padding 0 $textfield-padding - 1px 0;
     width: $textfield-width;
     background: none;
     text-align: left;
@@ -46,7 +46,7 @@
     pointer-events: none;
     position: absolute;
     display: block;
-    top: ($textfield-padding + $textfield-vertical-spacing);
+    top: ($textfield-padding + $textfield-vertical-spacing + 2px);
     width: 100%;
     overflow: hidden;
     font-family:'Roboto', sans-serif;
@@ -174,7 +174,7 @@
       .md-textfield__label{
         color: $textfield-highlight-color;
         font-size : $textfield-floating-label-fontsize;
-        top: $textfield-vertical-spacing - ($textfield-floating-label-fontsize + $textfield-padding);
+        top: $textfield-vertical-spacing - ($textfield-floating-label-fontsize + $textfield-padding/2 - 2px);
         visibility: visible;
       }
       .md-textfield__expandable-holder {
