--- a/resources/assets/sass/variables/_textfield.scss
+++ b/resources/assets/sass/variables/_textfield.scss
@@ -6,7 +6,7 @@
 
 $textfield-font-size: 16px !default;
 $textfield-width: 100% !default;
-$textfield-padding: 4px !default;
+$textfield-padding: 8px !default;
 $textfield-vertical-spacing: 20px !default;
 
 $textfield-button-size: 32px !default;
